--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-26T12:19:24.664689Z",
-     "start_time": "2025-04-26T12:19:20.543526Z"
+     "end_time": "2025-04-26T14:52:55.950012Z",
+     "start_time": "2025-04-26T14:52:55.938548Z"
     }
    },
    "source": [
@@ -33,13 +33,13 @@
     "from torch.utils.data import DataLoader, TensorDataset"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 53
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-26T12:29:49.928164Z",
-     "start_time": "2025-04-26T12:29:49.924441Z"
+     "end_time": "2025-04-26T14:52:55.969039Z",
+     "start_time": "2025-04-26T14:52:55.963004Z"
     }
    },
    "cell_type": "code",
@@ -72,13 +72,13 @@
    ],
    "id": "5ae1069d17f23f94",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 54
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-23T07:34:39.526Z",
-     "start_time": "2025-04-23T07:34:38.934516Z"
+     "end_time": "2025-04-26T14:52:56.799036Z",
+     "start_time": "2025-04-26T14:52:56.066807Z"
     }
    },
    "cell_type": "code",
@@ -88,13 +88,13 @@
    ],
    "id": "7bbafee3e5eac95",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 55
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-23T07:34:40.703988Z",
-     "start_time": "2025-04-23T07:34:39.977048Z"
+     "end_time": "2025-04-26T14:52:57.864273Z",
+     "start_time": "2025-04-26T14:52:56.849430Z"
     }
    },
    "cell_type": "code",
@@ -104,13 +104,13 @@
    ],
    "id": "8f5d1766ca3c6688",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 56
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-23T07:34:55.920063Z",
-     "start_time": "2025-04-23T07:34:40.732381Z"
+     "end_time": "2025-04-26T14:53:03.329114Z",
+     "start_time": "2025-04-26T14:52:58.108468Z"
     }
    },
    "cell_type": "code",
@@ -150,11 +150,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25it [00:15,  1.65it/s]\n"
+      "3it [00:04,  1.66s/it]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mKeyboardInterrupt\u001B[39m                         Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[57]\u001B[39m\u001B[32m, line 13\u001B[39m\n\u001B[32m     11\u001B[39m NH3_flux = np.interp(total_wl, NH3_wl, row[\u001B[33m'\u001B[39m\u001B[33mFLiTs NH3 Flux\u001B[39m\u001B[33m'\u001B[39m])\n\u001B[32m     12\u001B[39m flux = np.interp(total_wl, wl, row[\u001B[33m'\u001B[39m\u001B[33mFLiTs Flux\u001B[39m\u001B[33m'\u001B[39m] + row[\u001B[33m'\u001B[39m\u001B[33mFLiTs Flux Continuum\u001B[39m\u001B[33m'\u001B[39m])\n\u001B[32m---> \u001B[39m\u001B[32m13\u001B[39m flux_cont = \u001B[43mnp\u001B[49m\u001B[43m.\u001B[49m\u001B[43minterp\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtotal_wl\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mwl\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mrow\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mFLiTs Flux Continuum\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     14\u001B[39m flux = add_noise(flux, SNR=\u001B[32m300\u001B[39m)-flux_cont + NH3_flux\n\u001B[32m     15\u001B[39m dat = []\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\PycharmProjects\\BRP\\.venv\\Lib\\site-packages\\numpy\\lib\\_function_base_impl.py:1663\u001B[39m, in \u001B[36minterp\u001B[39m\u001B[34m(x, xp, fp, left, right, period)\u001B[39m\n\u001B[32m   1660\u001B[39m     xp = np.concatenate((xp[-\u001B[32m1\u001B[39m:]-period, xp, xp[\u001B[32m0\u001B[39m:\u001B[32m1\u001B[39m]+period))\n\u001B[32m   1661\u001B[39m     fp = np.concatenate((fp[-\u001B[32m1\u001B[39m:], fp, fp[\u001B[32m0\u001B[39m:\u001B[32m1\u001B[39m]))\n\u001B[32m-> \u001B[39m\u001B[32m1663\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43minterp_func\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mxp\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfp\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mleft\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mright\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[31mKeyboardInterrupt\u001B[39m: "
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 57
   },
   {
    "metadata": {
