Updates from Overleaf

--- a/Latex/Strw-bsc-minimal.tex
+++ b/Latex/Strw-bsc-minimal.tex
@@ -2,7 +2,7 @@
 \usepackage{lipsum}
 
 
-\title{Identifying the molecular diagnostics from disk models to infer the elemental abundances and disk substructures in JWST spectra}
+\title{Identifying Nitrogen Barrers}
 \author{Niels de Klerk}
 
 \major{Astronomy and Physics}
@@ -94,7 +94,7 @@ Some of the properties of the protoplanetary disks can be directly inferred from
 % \subsection{FLiTs}
 \chapter{Methods}\label{Ch: Methods}
 \section{Data}
-We ran 3 model grids with varying abundances of C and O. Each grid contains 25 models 
+We ran a model grid with varying abundances of C and O. Each grid contains 25 models, with the fiducial model in the middle, which is based on the solar abundances of C and O. We vary the relative carbon abundance with 
 \section{Analysis}
 For our analysis, we will use cross-correlation. This is a signal detection technique for detecting weak signals. It is defined as follows. 
 \begin{equation}
