--- a/Latex/Strw-bsc-minimal.tex
+++ b/Latex/Strw-bsc-minimal.tex
@@ -2,7 +2,7 @@
 \usepackage{lipsum}
 
 
-\title{Identifying Nitrogen Barrers}
+\title{Identifying Nitrogen Carriers in Planet-Forming Regions of Protoplanetary Disks}
 \author{Niels de Klerk}
 
 \major{Astronomy and Physics}
@@ -150,19 +150,19 @@ We ran a grid of models with \textbf{INSERT PARAMETERS} prodimo.
 \end{figure}
 \begin{figure}
     \centering
-    \includegraphics[width=0.5\linewidth]{heatmap NH3.pdf}
+    \includegraphics[width=\linewidth]{Figures/Density.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
 \begin{figure}
     \centering
-    \includegraphics[width=0.5\linewidth]{heatmap NO.pdf}
+    \includegraphics[width=\linewidth]{Figures/Temperature.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
 \begin{figure}
     \centering
-    \includegraphics[width=0.5\linewidth]{heatmap HCN.pdf}
+    \includegraphics[width=\linewidth]{Figures/Abundance.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
