Redid fitting to check

--- a/AllModels.ipynb
+++ b/AllModels.ipynb
@@ -5,9 +5,8 @@
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-05-05T11:49:06.365798Z",
-     "start_time": "2025-05-05T11:49:05.050063Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
@@ -33,7 +32,7 @@
     "warnings.simplefilter(\"ignore\", DeprecationWarning)"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": null
   },
   {
    "metadata": {
@@ -488,7 +487,7 @@
     "    if i != 12:\n",
     "        continue\n",
     "    # use subplots to plot the gas density and dust density next to each other\n",
-    "    fig, axs = plt.subplots(1, 2, figsize=(9, 2.7))\n",
+    "    fig, axs = plt.subplots(1, 2, figsize=(9, 4))\n",
     "    pp = pplot.Plot(None)\n",
     "    # This can be very useful is one wants to have multiple plots with a similar style\n",
     "    # Here we also change the color map\n",
@@ -537,8 +536,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-05T14:13:06.431424Z",
-     "start_time": "2025-05-05T14:13:05.672023Z"
+     "end_time": "2025-05-05T14:14:22.891060Z",
+     "start_time": "2025-05-05T14:14:22.137070Z"
     }
    },
    "cell_type": "code",
@@ -606,7 +605,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 33
+   "execution_count": 34
   },
   {
    "metadata": {
