Updates from Overleaf

--- a/Latex/Strw-bsc-minimal.tex
+++ b/Latex/Strw-bsc-minimal.tex
@@ -199,19 +199,19 @@ To make the simulated spectra as realistic as possible, we would like to add noi
 \end{figure}
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=\linewidth]{heatmap HCN.pdf}
+    \includegraphics[width=\linewidth]{Figures/HCN_heatmap.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=\linewidth]{heatmap NO.pdf}
+    \includegraphics[width=\linewidth]{Figures/NO_heatmap.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=\linewidth]{heatmap NH3.pdf}
+    \includegraphics[width=\linewidth]{Figures/NH3_heatmap.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
