--- a/AllModels.ipynb
+++ b/AllModels.ipynb
@@ -5,8 +5,9 @@
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2025-05-08T14:58:33.178078Z",
+     "start_time": "2025-05-08T14:58:31.835593Z"
     }
    },
    "source": [
@@ -32,13 +33,13 @@
     "warnings.simplefilter(\"ignore\", DeprecationWarning)"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-05T11:49:16.786904Z",
-     "start_time": "2025-05-05T11:49:09.399098Z"
+     "end_time": "2025-05-08T14:58:40.439327Z",
+     "start_time": "2025-05-08T14:58:33.301925Z"
     }
    },
    "cell_type": "code",
@@ -477,8 +478,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-05T13:47:25.725249Z",
-     "start_time": "2025-05-05T13:47:24.871226Z"
+     "end_time": "2025-05-08T14:59:13.045757Z",
+     "start_time": "2025-05-08T14:59:11.552640Z"
     }
    },
    "cell_type": "code",
@@ -487,7 +488,7 @@
     "    if i != 12:\n",
     "        continue\n",
     "    # use subplots to plot the gas density and dust density next to each other\n",
-    "    fig, axs = plt.subplots(1, 2, figsize=(9, 4))\n",
+    "    fig, axs = plt.subplots(1, 2, figsize=(9, 2.7))\n",
     "    pp = pplot.Plot(None)\n",
     "    # This can be very useful is one wants to have multiple plots with a similar style\n",
     "    # Here we also change the color map\n",
@@ -507,7 +508,7 @@
     "    ret = axs[1].text(0.95, 0.95, \"Dust\", transform=axs[1].transAxes, fontsize=14,\n",
     "                      verticalalignment='top', horizontalalignment=\"right\", bbox=props)\n",
     "    plt.tight_layout()\n",
-    "plt.savefig('Figures/Density.pdf')\n",
+    "plt.savefig('Figures/Density.pdf', bbox_inches='tight')\n",
     "plt.show()"
    ],
    "id": "a33477d57c2926a9",
@@ -531,13 +532,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 9
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-05T14:14:22.891060Z",
-     "start_time": "2025-05-05T14:14:22.137070Z"
+     "end_time": "2025-05-08T14:58:47.566053Z",
+     "start_time": "2025-05-08T14:58:46.741769Z"
     }
    },
    "cell_type": "code",
@@ -581,7 +582,7 @@
     "    ret = axs[1].text(0.95, 0.95, \"Dust\", transform=axs[1].transAxes, fontsize=14,\n",
     "                      verticalalignment='top', horizontalalignment=\"right\", bbox=props)\n",
     "    plt.tight_layout()\n",
-    "plt.savefig('Figures/Temperature.pdf')\n",
+    "plt.savefig('Figures/Temperature.pdf', bbox_inches='tight')\n",
     "plt.show()"
    ],
    "id": "f959bf93492326a7",
@@ -605,13 +606,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 34
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-05T14:02:02.113288Z",
-     "start_time": "2025-05-05T14:02:00.199183Z"
+     "end_time": "2025-05-08T14:59:24.099120Z",
+     "start_time": "2025-05-08T14:59:20.996624Z"
     }
    },
    "cell_type": "code",
@@ -637,7 +638,7 @@
     "    # _ =pp.plot_abuncont_grid(model,\n",
     "    #                       [\"HCN#\",\"NH3#\",\"NO#\",\"H2O#\"],nrows=2, ncols=2,\n",
     "    #                       zlim=[1.e-8,1.e-3],extend=\"both\",contour=False, cmap='inferno')\n",
-    "plt.savefig('Figures/Abundance.pdf')\n",
+    "plt.savefig('Figures/Abundance.pdf', bbox_inches='tight')\n",
     "plt.show()"
    ],
    "id": "34a51022cab9e2c3",
@@ -661,7 +662,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 28
+   "execution_count": 6
   },
   {
    "metadata": {
