Updates from Overleaf

--- a/Latex/Strw-bsc-minimal.tex
+++ b/Latex/Strw-bsc-minimal.tex
@@ -193,7 +193,7 @@ To make the simulated spectra as realistic as possible, we would like to add noi
 % \lipsum[1]
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=\linewidth]{All Spectra PRODIMO+FLITS.pdf}
+    \includegraphics[width=\linewidth]{Figures/All_spectra.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
