--- a/Latex/Strw-bsc-minimal.tex
+++ b/Latex/Strw-bsc-minimal.tex
@@ -1,7 +1,6 @@
-\documentclass[twoside,single, authoryear, semicolon]{lion-msc}
+\documentclass[twoside, single, authoryear, semicolon]{lion-msc}
 \usepackage{lipsum}
-% \usepackage[style=authoryear]{natbib}
-
+\usepackage{booktabs}
 \title{Identifying Nitrogen Carriers in Planet-Forming Regions of Protoplanetary Disks}
 \author{Niels de Klerk}
 
@@ -57,7 +56,7 @@
 \chapter{Introduction}
 The nebular hypothesis was first proposed in \textit{The Principia} by Emanuel Swedenborg in 1745. Immanuel Kant developed the theory further in 1752 and it was modified by Pierre-Simon Laplace in 1796. The theory states that a planetary system is formed from a slowly rotating gas cloud, which collapses down into a disk. Centuries later, the first protoplanetary disk was observed by O'Dell using the Hubble Space Telescope \citep{ODell1993}. In recent years, the Atacama Large Millimeter/submillimeter Array (ALMA) has imaged a large collection of these protoplanetary disks, showing a wide variety of structures and compositions. The JWST MIRI mid-INfrared Disk Survey (MINDS) team uses the JWST to investigate the inner parts of protoplanetary disks. The study of protoplanetary disks is important to find answers to the fundamental questions, 'How did life arise?' and 'Are we alone in the universe?'.
 
-The spectrum of protoplanetary disks can tell us a lot about the properties of the disk and the host star. An important example is an observation of the disk around a T Tauri star 89 sz\cite{Gasman_2023}. Using MIRI on the JWST, they probed the inner regions of the disk. They detected CO$_2$, H$_2$O, OH, CO, and HCN. Furthermore, no other organics were detected, suggesting a low C/O ($<$0.5) ratio. This result differed from the ratio found using ALMA ($>$1), which probed the outer regions. This highlights the complexity of disks and their chemistry.
+The spectrum of protoplanetary disks can tell us a lot about the properties of the disk and the host star. An important example is an observation of the disk around a T Tauri star 89sz \citep{Gasman_2023}. Using MIRI on the JWST, they probed the inner regions of the disk. They detected CO$_2$, H$_2$O, OH, CO, and HCN. Furthermore, no other organics were detected, suggesting a low C/O ($<$0.5) ratio. This result differed from the ratio found using ALMA ($>$1), which probed the outer regions. This highlights the complexity of disks and their chemistry.
 
 However, this observation is not necessarily representative of disks. \cite{colmenares2024jwstmiridetectioncarbonrichchemistry} observed a disk around the T Tauri star DoAr 33 with an exceptionally high C/O ratio of 2-4. In addition to CO, H$_2$O, and CO$_2$ like in the 89 sz disk, the more complex carbohydrates C$_2$H$_2$ and C$_4$H$_2$ were found. The presence of these molecules is indicative of this high ratio. A possible explanation for this carbon-rich environment is the slow accretion rate of the star, which results in slowing the radial mixing and the persistence of the carbon-grain destruction.
 
@@ -75,7 +74,7 @@ The evolution of the disk can be categorized into 4 classes \citep{1987ApJ...312
 % Factors that influence the evolution
 
 
-\section{Structure}
+
 The protoplanetary disk has structure, namely the radial structure and the vertical structure. The innermost regions ($<$10 AU) of the disk are the hottest and receive the most radiation. Most of the molecules are in gaseous form in this region, except for some silicates and metals. The star heavily influences the chemistry. The intermediate regions (10-100 AU) have lower temperatures, allowing molecules like water to condense. The outer regions ($>$100 AU) are the coldest in the disk. Molecules have formed ice here making them inert. \\
 The height of the disk is also an important factor in its structure. The midplane is the horizontal plane through the center of the disk. Most dust particles settle around the midplane whereas the gas particles are further out. The midplane is also colder than the outside of the disk as it receives less light from the star. The protoplanetary disk tends to flare outwards. Close to the star the disk is fairly compact, but when you go outwards from the star, the disk gets more and more extended from the midplane. 
 
@@ -86,22 +85,87 @@ The height of the disk is also an important factor in its structure. The midplan
     \label{fig:enter-label}
 \end{figure}
 
-
+\section{Disk Chemistry}
+\lipsum[1-8]
 \section{Emission Mechanisms}
-
+\lipsum[1-10]
+\section{JWST MIRI MRS}
+\lipsum[1-9]
 % \section{Radiative Transfer}
 \section{Modeling}
-Some of the properties of the protoplanetary disks can be directly inferred from disk measurements. For instances where this is not the case, we would still like to learn more from our data via a different method. We can use models to simulate the protoplanetary disk and generate synthetic data to compare to actual observations. There are various types of models. Ranging from 1D slab models to thermo-chemical disk models. For our research, we run simulations using PROtoplanetary DIsk MOdel (Prodimo), a thermo-chemical disk model. The output of those simulations is then put through Fast Line Tracing system (FLiTs) to get an accurate spectrum of the disk. 
-% \subsection{ProDiMo}
-
-% \subsection{FLiTs}
+Some of the properties of the protoplanetary disks can be directly inferred from disk measurements. For instances where this is not the case, we would still like to learn more from our data via a different method. We can use models to simulate the protoplanetary disk and generate synthetic data to compare to actual observations. There are various types of models. Ranging from 1D slab models to thermo-chemical disk models. For our research, we run simulations using PROtoplanetary DIsk MOdel (ProDiMo), a thermo-chemical disk model. The output of those simulations is then put through Fast Line Tracing system (FLiTs) to get an accurate spectrum of the disk. 
+\section{Goal}
+\lipsum[1-5]
 \chapter{Methods}\label{Ch: Methods}
-\section{Simulation}
+\section{ProDiMo Simulations}
+
+\begin{table}[!ht]
+\centering
+\begin{tabular}{@{}lll@{}}
+                                  &                             &                            \\ \hline\midrule
+\textbf{Property}                 & \textbf{Symbol}             & \textbf{Value}             \\ \midrule
+Stellar mass                      & M$_\ast$                    & 0.7M$_\odot$               \\
+Effective Temperature             & T$_\ast$                    & 4000 K                     \\
+Stellar Luminosity                & L$_\ast$                    & 1 L$_\odot$                \\
+UV excess                         & f$_{UV}$                    & 0.01                       \\
+UV powerlaw index                 & p$_{UV}$                    & 1.3                        \\
+X-ray luminosity                  & L$_x$                       & 10$^30$ erg/s              \\
+X-ray emission temperature        & T$_x$                       & 2$\times10^7$ K            \\ \midrule
+Strength of interstellar UV       & $\chi^{ISM}$                & 1                          \\
+Strength of interstellar IR       & $\chi^{ISM}_{IR}$           & 0                          \\
+Cosmic ray H$_2$ ionization rate & $\zeta_{CR}$                & $1.7\times10^{-17} s^{-1}$ \\ \midrule
+Inner disk radius                 & R$_{in}$                    & 0.05 au                    \\
+Outer disk radius                 & R$_{tap}$                   & 30 au                      \\
+Column density power index        & $\epsilon$                  & 1                          \\
+Reference scale height            & H$_g$ (100 au)              & 10 au                      \\
+Flaring power index               & $\beta$                     & 1.15                       \\ \midrule
+Minimum dust particle radius      & a$_{min}$                   & 0.05 $\mu$m                \\
+Maximum dust particle radius      & a$_{max}$                   & 3000 $\mu$m                \\
+Dust size dist. power index       & a$_{pow}$                   & 3.5                        \\
+Turbulent mixing parameter        & $\alpha_{settle}$           & 0.001                      \\
+Refractory dust composition       & Mg$_{0.7}$Fe$_{0.3}$SiO$_3$ & 60 \%                      \\
+                                  & amorph. C                   & 15 \%                      \\
+                                  & porosity                    & 25 \%                      \\
+PAH abundance rel. to ISM         & f$_{PAH}$                   & 0.01                       \\
+Chemical heating efficiency       & $\gamma^{chem}$             & 0.2                        \\ \midrule
+Distance to the observer          & d                           & 140 pc                     \\ \bottomrule
+\end{tabular}
+\caption{}
+\label{tab:parameters}
+\end{table}
+
+
+\begin{table}[!ht]
+\centering
+\begin{tabular}{@{}lll@{}}
+                                  &                             &                            \\ \hline\midrule
+\textbf{Element} & \textbf{+12 Abundance} & \textbf{Variation}            \\ \midrule
+H                & 12                     & Fixed                         \\
+He               & 10.984                 & Fixed                         \\
+C                & 8.140                  & {[}-0.5, -0.25, 0, +0.25, +0.5{]} \\
+N                & 8.900                  & Fixed                         \\
+O                & 8.480                  & {[}-0.5, -0.25, 0, +0.25, +0.5{]} \\
+Ne               & 7.950                  & Fixed                         \\
+Na               & 3.360                  & Fixed                         \\
+Mg               & 4.030                  & Fixed                         \\
+Si               & 4.240                  & Fixed                         \\
+S                & 5.270                  & Fixed                         \\
+Ar               & 6.080                  & Fixed                         \\
+Fe               & 3.240                  & Fixed                         \\
+PAH              & 3.444                  & Fixed                         \\ \bottomrule
+\end{tabular}
+\caption{}
+\label{tab:abundances}
+\end{table}
+
 We ran a model grid with varying abundances of C and O. Each grid contains 25 models, with the fiducial model in the middle, which is based on the solar abundances of C and O. 
 
-FLiTs to simulate the spectra of each model. Both the entire spectrum with \textbf{INSERT EXACT MOLECULES IN THE TOTAL SPECTRUM} and the spectra of \textbf{INSERT MOLECULES WITH OWN SPECTRUM} as well. 
+After running the model grid, we used FLiTs to generate the spectra for all the models. We calculated the entire spectrum containing  \textbf{INSERT EXACT MOLECULES IN THE TOTAL SPECTRUM} and the spectra of individual molecules as well. The spectra we retrieved with FLiTs have an unrealistically high resolution. To make the spectrum more realistic, we convolved the spectrum to a resolving power of 3000 using the \textit{prodimopy.read.DataFLiTsSpec.convolve}\citep{SOURCE}, which convolves the spectrum with a Gaussian kernel to create a spectrum of the correct resolving power. The value of 3000 was chosen as it is approximately the average resolving power of the MIRI MRS \citep{SOURCE}. 
 
-\section{Analysis}
+We wanted to add noise to the data to make the simulated spectra as realistic as possible. The MINDS team has observations which have $SNR = 300$ \citep{SOURCE}. We want to make our simulated data follow the same vein. Using the spectrum minimum, we estimate the noise level needed to create an $SNR = 300$. We assume that the noise is normally distributed. After applying this noise, we subtract the continuum to get the actual spectrum we can use to analyse the different molecules that compose it.
+
+
+\section{Cross-Correlation}
 For our analysis, we will use cross-correlation. This is a signal detection technique for detecting weak signals. It is defined as follows. 
 \begin{equation}
     R_{fg}(\tau)=\int^\infty_{-\infty}\overline{f(t)}g(t+\tau)dt
@@ -112,7 +176,7 @@ The autocorrelation is the cross-correlation of a function with itself
 \end{equation}
 As all our functions are real valued, we can omit the complex conjugation in the integrand.
 
-We will calculate the average spectrum for each species and divide that by the maximum of the spectrum to normalize it. We use this template spectrum to cross-correlate with the spectrum containing all the species. The cross-correlation should peak when the template spectrum matches with the spectrum containing all the species. To quantify the height of the peak, we take the difference between the height of the peak and the median value of the cross-correlation in a small region around the peak. We take the median as this is less susceptible to outliers to more optimally capture the general trend around the peak. We use hypothesis testing to test whether or not there is statistical evidence to say the molecule is present. We have the following null hypothesis and alternative hypothesis
+We will calculate the average spectrum for each species and divide that by the maximum of the spectrum to normalize it. We use this template spectrum to cross-correlate with the spectrum containing all the species. The cross-correlation should peak when the template spectrum matches with the spectrum containing all the species. To quantify the height of the peak, we take the difference between the height of the peak and the median value of the cross-correlation in a small region around the peak. We take the median as this is less susceptible to outliers to capture the general trend around the peak more optimally. We use hypothesis testing to test whether or not there is statistical evidence to say the molecule is present. We have the following null hypothesis and alternative hypothesis
 
 \begin{equation}
     H_0: \text{The height of the peak in the cross-correlation is caused by noise}
@@ -132,89 +196,88 @@ The flux density we have from FLiTs is in units of Jansky, but we would like to 
 
 
 
-
-\subsection{Simulations}
-We ran a grid of models with \textbf{INSERT PARAMETERS} prodimo. 
-
-To make the simulated spectra as realistic as possible, we would like to add noise to the data. The MINDS team has observations which have $SNR = 300$ \citep{SOURCE}. We want to make our simulated data in the same vein. Using the minimum of the spectrum, we estimate the noise level needed to create an $SNR = 300$. We assume that the noise is normally distributed. After applying this noise, we subtract the continuum to get the actual spectrum we can use to analyse the different molecules that compose it. 
-
-\subsection{Observations}
+\section{Observations}
+After looking at the simulated spectra, we wanted to apply our techniques to observations made with JWST MIRI MRS. We have access to 3 sources. 
 1D LTE models to fit the model and try to enhance the hidden molecules
-\subsubsection{GWLup}
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.5\linewidth]{All Spectra PRODIMO+FLITS 1.pdf}
+    \includegraphics[width=0.5\linewidth]{GWLup.pdf}
+    \caption{Caption}
+    \label{fig:enter-label}
+\end{figure}
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Sz98.pdf}
+    \caption{Caption}
+    \label{fig:enter-label}
+\end{figure}
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=0.5\linewidth]{V1094Sco.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
 
-\subsubsection{Sz98}
-\begin{figure}[!ht]
-    \centering
-    \includegraphics[width=0.5\linewidth]{spectrum 2.pdf}
-    \caption{Caption}
-    \label{fig:enter-label}
-\end{figure}
-\subsubsection{V1094Sco}
-\begin{figure}[!ht]
-    \centering
-    \includegraphics[width=0.5\linewidth]{spectrum 3.pdf}
-    \caption{Caption}
-    \label{fig:enter-label}
-\end{figure}
+
+
 \chapter{Results}
+\section{ProDiMo Output}
+After running the models, we inspect their output. First, we look at the densities of the gas and dust in the disk. We see that the density of the gas stretches higher than the density of the dust. This is expected, as we know that the dust settles around the midplane. 
 
-% \begin{figure}[!ht]
-%     \centering
-%     \includegraphics[width=0.5\linewidth]{Spectrum Grid 2.pdf}
-%     \caption{Caption}
-%     \label{fig:enter-label}
-% \end{figure}
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=\linewidth]{Figures/Density.pdf}
     \caption{The distribution of the gas and dust in the disk of the fiducial model.}
-    \label{fig:enter-label}
+    \label{fig:density}
 \end{figure}
-% \lipsum[1]
+
+Next, we expect the temperature of the gas and dust across the disk. We can see is that the gas temperature is more structured around the midplane. The dust temperature gradient has straight sections above the main body of the disk. This result is also expected as the density of the dust is orders of magnitude lower in the regions above the disk. This results in the starlight getting barely blocked, so the temperature doesn't change across different heights.
+
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=\linewidth]{Figures/Temperature.pdf}
     \caption{The temperature of the gas and dust in the disk of the fiducial model.}
-    \label{fig:enter-label}
+    \label{fig:temperature}
 \end{figure}
-% \lipsum[1]
+
+Lastly, we inspect the distribution of HCN, HNC, NH$_3$, and NO -common nitrogen carriers. We see in figure \ref{fig:nitrogen distribution} that the density of the molecules changes a lot for different radii and heights. For example, in the region between 1, 2 we see that HCN decreases compared to the surrounding regions, but HNC increases in the same region. 
+
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=\linewidth]{Figures/Abundance.pdf}
     \caption{The distribution of HCN, HNC, NH$_3$, and NO across the disk of the fiducial model.}
-    \label{fig:enter-label}
+    \label{fig:nitrogen distribution}
 \end{figure}
-% \lipsum[1]
-\begin{figure}[!ht]
+\section{FLiTs Spectra}
+The models in the model grid we have created were used with FLiTs to create accurate spectra. The resulting spectra containing 
+\begin{figure}[!h]
     \centering
     \includegraphics[width=\linewidth]{Figures/All_spectra.pdf}
-    \caption{Caption}
-    \label{fig:enter-label}
+    \caption{The simulated spectra of all the models in the model grid using FLiTs. On the horizontal axis, the O abundance is varied with -0.5 to 0.5 w.r.t. the reference abundance. The C abundance is varied with -0.5 to 0.5 w.r.t. the reference abundance from top to bottom.}
+    \label{fig:all spectra}
+\end{figure}
+The flux of the different species changes depending on the abundances of C and O. In \ref{fig:flux HCN}, we can see this.
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Figures/HCN_heatmap.pdf}
+    \caption{The total received flux of HCN for all the models in the grid.}
+    \label{fig:flux HCN}
 \end{figure}
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=\linewidth]{Figures/HCN_heatmap.pdf}
-    \caption{Caption}
-    \label{fig:enter-label}
+    \includegraphics[width=0.5\linewidth]{Figures/NO_heatmap.pdf}
+    \caption{The total received flux of NO for all the models in the grid.}
+    \label{fig:flux NO}
 \end{figure}
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=\linewidth]{Figures/NO_heatmap.pdf}
-    \caption{Caption}
-    \label{fig:enter-label}
+    \includegraphics[width=0.5\linewidth]{Figures/NH3_heatmap.pdf}
+    \caption{The total received flux of NH$_3$ for all the models in the grid.}
+    \label{fig:flux NH3}
 \end{figure}
-\begin{figure}[!ht]
-    \centering
-    \includegraphics[width=\linewidth]{Figures/NH3_heatmap.pdf}
-    \caption{Caption}
-    \label{fig:enter-label}
-\end{figure}
+
+We see that the HCN increases as C/O gets larger, and NO decreases with it. 
+
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=\linewidth]{NO region of interest.pdf}
@@ -233,24 +296,30 @@ To make the simulated spectra as realistic as possible, we would like to add noi
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
+
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=\linewidth]{Adding noise.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
+
+\section{Molecule Detection}
+\lipsum[1-3]
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=\linewidth]{cross-correlation.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
+\lipsum[1-8]
 
+\section{Application on Observations}
+\lipsum[1-5]
 \chapter{Discussion}
-% \lipsum[1-10]
+\lipsum[1-10]
 \chapter{Conclusion}
-% \lipsum[1-4]
+\lipsum[1-4]
 \bibliographystyle{aa.bst}
 \bibliography{references}
-
 \end{document}
