More plots for thesis

--- a/RealData.ipynb
+++ b/RealData.ipynb
@@ -1044,8 +1044,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T09:47:21.459078Z",
-     "start_time": "2025-05-10T09:47:20.934026Z"
+     "end_time": "2025-05-10T09:51:24.029401Z",
+     "start_time": "2025-05-10T09:51:23.383122Z"
     }
    },
    "cell_type": "code",
@@ -1061,7 +1061,7 @@
     "    plt.xlabel(r'Wavelength ($\\mu$m)')\n",
     "    plt.ylabel('Flux Density (mJy)')\n",
     "    plt.title(Source)\n",
-    "    plt.savefig(f'Figures/FullSpectrum_{Source}.pdf')\n",
+    "    plt.savefig(f'Figures/FullSpectrum_{Source}.pdf', bbox_inches='tight')\n",
     "    plt.show()"
    ],
    "id": "dda8b06d879f0522",
@@ -1097,7 +1097,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 18
+   "execution_count": 19
   }
  ],
  "metadata": {
