Updates from Overleaf

--- a/Latex/Strw-bsc-minimal.tex
+++ b/Latex/Strw-bsc-minimal.tex
@@ -201,19 +201,19 @@ After looking at the simulated spectra, we wanted to apply our techniques to obs
 1D LTE models to fit the model and try to enhance the hidden molecules
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.5\linewidth]{GWLup.pdf}
+    \includegraphics[width=0.5\linewidth]{Figures/FullSpectrum_GWLup.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.5\linewidth]{Sz98.pdf}
+    \includegraphics[width=0.5\linewidth]{Figures/FullSpectrum_Sz98.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.5\linewidth]{V1094Sco.pdf}
+    \includegraphics[width=0.5\linewidth]{Figures/FullSpectrum_V1094Sco.pdf}
     \caption{Caption}
     \label{fig:enter-label}
 \end{figure}
